# bayesian-event-detector

./: Benchmark.py  LICENSE  Lambda_abc_NumPyro.py  README.md  dual_sync_bayesian.py  event_jump_detector.py  lambda3_abc.py  lambda3_core.py  lambda3_jump_event_detector.py  pyproject.toml  requirements.txt  structural_coupling_validity.py  test_event_jump_detector.py  test_lambda3_jump_event_detector.py
3rd_Ver_dual_sync_model/: pyproject.toml
R&D/: lambda3_cloud_parallel.py  lambda3_regime_aware_extension.py  lambda3_zeroshot_tensor_field.py  test.py
dual_sync_model/jit/: dual_sync_bayesian_jit.py  pyproject.toml
lambda3_benchmark/: __init__.py
lambda3_benchmark/data_generation/: __init__.py  delayed_domino.py  hidden_domino.py  unidirectional.py
lambda3_benchmark/evaluation/: __init__.py  metrics.py
lambda3_benchmark/methods/: __init__.py  graphical_lasso_detector.py  lambda3_detector.py  lambda3_detectors.py  lambda3_structural_benchmark.py  transfer_entropy_detector.py  var_detector.py
lambda3_jump_event_detector/: lambda3_jump_event_detector.py
lambda3_numpyro/: DESIGN.md  analysis.py  bayes.py  config.py  feature.py  init.py  io.py  main.py  plot.py  requirements.txt  types.py
lambda3_numpyro/examples/: lambda3_colab_setup.ipynb
notebooks/: phase1_delayed_domino.ipynb
sample/: AutomaticPairAnalysi.py  README.md  WeatherAnalysis.py  WeatherAnalysis_ny.py  WeatherAnalysis_tokyo.py  lambda3_weather_analysis.ipynb  openmeteo_requests.py  tokyo_weather_days.csv
