[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lambda3_bayesian_event_detector"
version = "0.4.0"
description = "Lambda³: Event-driven Bayesian framework for asymmetric, lagged, and structural interaction detection in time series. Advanced tensor-based modeling and network diagnostics for science, finance, and beyond."
authors = [
  { name="Masamichi Iizumi", email="iizumimasamichi@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.2",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "pymc==5.13.1",
    "arviz==0.17.0",
    "pytensor==2.31.3",
    "scikit-learn==1.5.0",
    "networkx==3.3",
    "numba==0.59.1"
]
