[tool.poetry]
name = "bayesian-event-detector"
version = "0.1.0"
description = "Lambda³ Analytics for Bayes & CausalJunction - A framework for detecting structural changes and causal relationships in time series using Bayesian methods"
authors = ["Masamichi Iizumi <m.iizumi@miosync.email>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/miosync-masa/bayesian-event-detector"
repository = "https://github.com/miosync-masa/bayesian-event-detector"
keywords = ["lambda3", "bayesian", "time-series", "event-detection", "causal-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
pymc = "^5.0"
numpy = "^1.21"
arviz = "^0.15"
seaborn = "^0.12"
matplotlib = "^3.5"
scikit-learn = "^1.0"
networkx = "^3.0"
numba = "^0.56"
pandas = "^1.3"
yfinance = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^23.0"
isort = "^5.0"
flake8 = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120
